rename the app to Lalumo
add language preferences german, english

mascot reads out loud what to do

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "musici",
+  "name": "lalumo",
   "version": "1.0.0",
   "description": "Child-friendly music understanding app",
   "main": "index.js",
