--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "@capacitor/android": "^7.2.0",
+    "@capacitor/cli": "^7.2.0",
+    "@capacitor/core": "^7.2.0",
+    "@capacitor/ios": "^7.2.0",
+    "@capacitor/splash-screen": "^7.0.1",
     "alpinejs": "^3.13.5",
     "tone": "^15.1.22"
   }
