--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@babel/core": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
+    "@playwright/test": "^1.52.0",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^6.10.0",
