App-Optimierung wurde erfolgreich für den Release-Build von Lalumo aktiviert. Ich habe folgende Änderungen in der android/app/build.gradle -Datei vorgenommen:
isMinifyEnabled wurde auf true gesetzt, um die Code-Optimierung zu aktivieren
isShrinkResources wurde auf true gesetzt, um die Ressourcen-Optimierung zu aktivieren
Die Proguard-Konfiguration wurde auf proguard-android-optimize.txt aktualisiert (statt proguard-android.txt), um optimierte Standardregeln zu verwenden

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,8 +22,13 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            // Enables code-related app optimization
+            isMinifyEnabled true
+            
+            // Enables resource shrinking
+            isShrinkResources true
+            
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 }
