--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "sync-strings": "mkdir -p public/android/app/src/main/res/values public/android/app/src/main/res/values-de && cp android/app/src/main/res/values/strings.xml public/android/app/src/main/res/values/ && cp android/app/src/main/res/values-de/strings.xml public/android/app/src/main/res/values-de/ && cp android/app/src/main/res/values/strings.xml public/strings-en.xml && cp android/app/src/main/res/values-de/strings.xml public/strings-de.xml",
     "watch": "npm run sync-strings && webpack serve --mode development",
-    "dev": "npm run sync-strings && webpack serve --mode development",
-    "build": "npm run sync-strings && webpack --mode production"
+    "build": "npm run sync-strings && webpack --mode production",
+    "build:fast": "npm run sync-strings && webpack --mode development"
   },
   "keywords": [
     "music",
