--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "lalumo",
-  "version": "1.6",
+  "version": "1.99",
+  "versionCode": 20,
   "description": "Child-friendly music understanding app",
   "main": "index.js",
   "scripts": {
