--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@ node_modules/
 
 # Build outputs
 dist/
+app/*.js
+app/*.js.map
+app/*.css
+app/*.html
+app/*.json
 
 # Generated XML files for web development (copied from android/app/src/main/res/)
 public/android/
