--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ app/*.js.map
 app/*.css
 app/*.html
 app/*.json
+app/images/
 
 # Generated XML files for web development (copied from android/app/src/main/res/)
 public/android/
