--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ app/images/
 app/main.*
 app/strings-*.xml
 app/index.html
+app/homepage/images/screenshots/
 
 # Generated XML files for web development (copied from android/app/src/main/res/)
 public/android/
