--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ app/main.*
 app/strings-*.xml
 app/index.html
 app/homepage/images/screenshots/
+app/homepage/images/logo_bird_sings.jpg
 
 # Generated XML files for web development (copied from android/app/src/main/res/)
 public/android/
