--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^6.10.0",
+    "ejs": "^3.1.10",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^5.2.2"
   },
   "dependencies": {
     "@capacitor/android": "^7.2.0",
