--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^6.10.0",
-    "ejs": "^3.1.10",
+    "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "style-loader": "^3.3.3",
