--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "css-loader": "^6.10.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.5.3",
+    "js-yaml": "^4.1.0",
     "mini-css-extract-plugin": "^2.7.6",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.2.2"
+    "webpack-dev-server": "^5.2.2",
+    "yaml-loader": "^0.8.1"
   },
   "dependencies": {
     "@capacitor/android": "^7.2.0",
