--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,7 @@ yarn-error.log*
 
 # Admin dashboard
 /admin/
+/app/favicon.ico
+/app/icons/apple-touch-icon.png
+/app/icons/icon-192.png
+/app/icons/icon-512.png
