ignore android studio file

--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,4 @@ yarn-error.log*
 /app/icons/icon-192.png
 /app/icons/icon-512.png
 /app/android/app/src/main/res/values*/strings*.xml
+/android/.idea/deploymentTargetSelector.xml
