--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.5.3",
     "js-yaml": "^4.1.0",
+    "loader-utils": "^3.3.1",
     "mini-css-extract-plugin": "^2.7.6",
+    "node-html-parser": "^7.0.1",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
