--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,4 @@ yarn-error.log*
 /app/android/app/src/main/res/values*/strings*.xml
 /android/.idea/deploymentTargetSelector.xml
 /android/.idea/deviceManager.xml
+/.idea/misc.xml
