--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,5 @@
+rootProject.name = 'Lalumo'
+
 include ':app'
 include ':capacitor-cordova-android-plugins'
 project(':capacitor-cordova-android-plugins').projectDir = new File('./capacitor-cordova-android-plugins/')
