feat: implement XML minification and update string file handling in webpack config

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sync-strings": "mkdir -p public/android/app/src/main/res/values public/android/app/src/main/res/values-de && cp android/app/src/main/res/values/strings.xml public/android/app/src/main/res/values/ && cp android/app/src/main/res/values-de/strings.xml public/android/app/src/main/res/values-de/ && cp android/app/src/main/res/values/strings.xml public/strings-en.xml && cp android/app/src/main/res/values-de/strings.xml public/strings-de.xml",
+    "sync-strings": "mkdir -p public/android/app/src/main/res/values public/android/app/src/main/res/values-de && cp android/app/src/main/res/values/strings.xml public/android/app/src/main/res/values/ && cp android/app/src/main/res/values-de/strings.xml public/android/app/src/main/res/values-de/",
     "watch": "npm run sync-strings && webpack serve --mode development",
     "build": "npm run sync-strings && webpack --mode production",
     "build:fast": "npm run sync-strings && webpack --mode development"
