--- a/metadata/com.lalumo.app.yml
+++ b/metadata/com.lalumo.app.yml
@@ -1,5 +1,5 @@
 Categories:
-  - Education
+  - Science & Education
   - Multimedia
 License: GPL-3.0-or-later
 AuthorName: Ruben Barkow-Kuder
@@ -14,37 +14,35 @@ RepoType: git
 Repo: https://github.com/Eastcoast-Laboratories/Lalumo
 
 Builds:
-  - versionName: "3.0"
+  - versionName: '3.0'
     versionCode: 26
-    commit: "02c52693905cf3c2a8d4fc2c65d6ae8f84cc7a9d"
-    subdir: android
+    commit: 02c52693905cf3c2a8d4fc2c65d6ae8f84cc7a9d
+    subdir: android/app
+    sudo:
+      - echo "deb https://deb.debian.org/debian trixie main" > /etc/apt/sources.list.d/trixie.list
+      - apt-get update
+      - apt-get install -y -t trixie openjdk-21-jdk-headless
+      - apt-get install -y npm
+      - update-alternatives --auto java
     gradle:
       - yes
+    output: app/build/outputs/apk/release/app-release-unsigned.apk
+    prebuild:
+      - cd ../..
+      - npm install --build-from-source
+      - mkdir -p app/images/backgrounds
+      - cp -r public/images/backgrounds/* app/images/backgrounds/
+      - mkdir -p android/capacitor-cordova-android-plugins
+      - echo "// Empty cordova variables" > android/capacitor-cordova-android-plugins/cordova.variables.gradle
+      - npm run build
+      - npx cap telemetry off
+      - npx cap sync android
+    build:
+      - chmod +x ./mobile-build.sh
+      - cd android && ./gradlew clean
+      - ./mobile-build.sh android
 
 AutoUpdateMode: Version
 UpdateCheckMode: Tags
-CurrentVersion: "3.0"
+CurrentVersion: '3.0'
 CurrentVersionCode: 26
-
-Summary: Kids learn music with animal friends, melodies, and puzzles - playful and colorful!
-Description: |-
-  Lalumo - Children Discover Music with Heart and Ear
-
-  With Lalumo, young children dive into the colorful world of music! In a playful way and with
-  lovingly designed animal characters, they explore pitch, melody, timbre, and rhythm - no prior
-  knowledge needed. Musical concepts are experienced intuitively.
-
-  Features:
-  * Children recognize pitches by listening and pressing the right animal
-  * Child-friendly activities
-  * Listen to familiar children's songs and decide if they sound right or "wrong"
-  * Choose animals that match pleasant or strange-sounding melodies
-  * Explore rising, falling or jumping melodies
-  * No ads, no in-app purchases
-  * Child lock mode and screen protection
-  * Palm rejection for multitouch
-  * Beautiful illustrations resembling hand-painted picture books
-  * Fully usable offline, distraction-free
-
-  Perfect for preschoolers, parents who want to support early musical learning, and educators
-  who want to introduce children to worlds of sound.
